--- a/src/pages/pokemondetails/react/detail.css
+++ b/src/pages/pokemondetails/react/detail.css
@@ -5,3 +5,13 @@
 .margin-auto {
   margin: auto !important;
 }
+
+.main-content {
+  height: 93%;
+  display: flex !important;
+  align-items: center !important;
+}
+
+.main-container {
+  height: 100%;
+}
